--- a/dgtodo/styles/globals.css
+++ b/dgtodo/styles/globals.css
@@ -13,6 +13,7 @@ body {
   max-width: 600px;
   margin: 2rem auto;
   padding: 2rem;
+  position: relative;
 }
 
 .header {
@@ -61,6 +62,10 @@ body {
 }
 
 .footer {
+  position: absolute;
+  bottom: 0;
+  width: 98.35%;
+  height: 8%;
   background-color: #1e3a8a;
   color: white;
   text-align: center;
@@ -135,4 +140,62 @@ body {
 
 .login-form button:hover {
   background-color: #05b36a;
+}
+.personCard{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  border-bottom: 1px solid #ccc;
+}
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 35%;
+  height: 25%;
+  background-color: rgb(172, 171, 171);
+  border-radius: 8px;
+}
+.modalContent{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.modalItem{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.modalItem input{
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  max-width: 300px;
+}
+.modal button{
+  padding: 0.5rem 1rem;
+  background-color: #02a561;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.closeButton{
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.5rem;
+  background-color: #f0f0f0;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
